# porthunter-mcp

./: .gitignore  Dockerfile  Makefile  README.md  mcp.json  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
docs/: benchmarks.md  ompliance-matrix.md
porthunter/: __init__.py  server.py  stdio_server.py
porthunter/utils/: cache.py  pcap.py
porthunter/utils/intel/: asn.py  geo.py  greynoise.py  otx.py
scripts/: benchmark_porthunter.py
tests/: _mcp_client.py  conftest.py  test_ip_validation.py  test_sanitize_path.py
